# Inlining_Demonstration

./: CMakeLists.txt  README.md  config.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
